--- a/landing.html
+++ b/landing.html
@@ -156,8 +156,8 @@
           <p>We will send you a link, open it and download in your phone</p>
           <div class="radio__buttons_container">
             <div>
-              <input type="radio" id="email" name="download_app" />
-              <label for="email" style="font-size: 14px">Email</label>
+              <input type="radio" id="email" name="download_app" checked />
+              <label for="email" style="font-size: 14px" >Email</label>
             </div>
             <div>
               <input type="radio" id="phone" name="download_app" />
